--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,13 @@
         android:layout_marginBottom="20dp" />
 
     <!-- Вложенный LinearLayout. Расположение строки ввода текста и кнопки "Добавить" -->
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signature" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
